welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: value min_value is not a member of object Integer
  var max2:Int=Integer.min_value
                       ^